Fix button alignment

--- a/app/src/components/ViewEventsCards/EventCardElement.module.scss
+++ b/app/src/components/ViewEventsCards/EventCardElement.module.scss
@@ -167,6 +167,7 @@
 .stateContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .stateText {
